--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 <button id="login-submit" class="bg-yellow-600 px-4 rounded py-2 text-white font-medium">Submit</button>
             </div>
         </section>
+        <section class="mx-auto mt-8 bg-green-100 w-3/4 p-8">
+            <h3 class="text-2xl mb-4">Login Info</h3>
+            <div>
+                User Email = demo@demo.com <br>
+                User Password = demo
+            </div>
+        </section>
 
     </main>
 
